--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -437,6 +437,12 @@ nav {
   }
 }
 
+#visualViewport {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+}
+
 // Media Queries
 
 @include mq.media(">=tablet") {
